--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,4 @@
 {
-  "scripts": {
-    "start": "node index.js"
-  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -10,5 +7,16 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8"
-  }
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "devDependencies": {},
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Alex Ivanov",
+  "license": "ISC",
+  "description": ""
 }
