--- a/server/package.json
+++ b/server/package.json
@@ -1,13 +1,4 @@
 {
-  "dependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8"
-  },
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
@@ -18,5 +9,14 @@
   },
   "author": "Alex Ivanov",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8"
+  }
 }
