--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,7 @@
     "node": "20.11.0",
     "npm": "10.2.4"
   },
-  "devDependencies": {},
-  "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "Alex Ivanov",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
+  "devDependencies": {
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
@@ -22,5 +14,12 @@
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.8"
-  }
+  },
+  "scripts": {
+    "start": "node index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Alex Ivanov",
+  "license": "ISC",
+  "description": ""
 }
