--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "nodemailer": "^6.9.8"
   },
   "scripts": {
+    "dev": "webpack --config=Scripts/config/webpack.dev.js --watch",
+    "build": "webpack --config=Scripts/config/webpack.prod.js",
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
