--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,6 @@
     "node": "20.11.0",
     "npm": "10.2.4"
   },
-  "devDependencies": {
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.1",
-    "express": "^4.18.2",
-    "mongoose": "^8.1.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.8"
-  },
   "scripts": {
     "start": "node index.js",
     "dev": "webpack --config=Scripts/config/webpack.dev.js --watch",
@@ -23,5 +14,14 @@
   },
   "author": "Alex Ivanov",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.1",
+    "express": "^4.18.2",
+    "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.8"
+  }
 }
